prevent timer text content jumping

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
 .timer__text {
   margin: .625rem 0;
   font-size: 3.75rem;
+  height: 7.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .timer__info {
@@ -80,6 +84,7 @@
 
   .timer__text {
     font-size: 2.5rem;
+    height: 3rem;
   }
 
   .timer__info {
